--- a/loot-guard-plugin/build.gradle
+++ b/loot-guard-plugin/build.gradle
@@ -42,11 +42,13 @@ ext {
     fasterXmlVersion = '2.14.2'
     grpcVersion = '1.57.1'
     rampageLibrary = '1.5.6'
+    glowingVersion = "1.4.3"
 }
 
 dependencies {
     compileOnly "io.papermc.paper:paper-api:$paperVersion"
 
+    implementation "fr.skytasul:glowingentities:$glowingVersion"
     implementation "com.google.inject:guice:$guiceVersion"
     implementation project(":loot-guard-api")
     implementation "com.rampagemc:rampage-library:$rampageLibrary"
